--- a/style.css
+++ b/style.css
@@ -1,1 +1,25 @@
 @charset "UTF-8";
+ .a{
+    text-align:center;
+}
+.e{
+    text-align:center;
+ }
+ .g{
+    text-align:center;
+ }
+ .l{
+    text-align:center;
+ }
+ .n{
+    text-align:center;
+ }
+ .r{
+    text-align:center;
+ }
+ .v{
+    text-align:center;
+ }
+ .w{
+    text-align:center;
+ }
