--- a/style.css
+++ b/style.css
@@ -1,25 +1,8 @@
 @charset "UTF-8";
- .a{
-    text-align:center;
-}
-.e{
-    text-align:center;
+ .blue{
+   color:blue;
  }
- .g{
-    text-align:center;
+ .center{
+   text-align: center;
  }
- .l{
-    text-align:center;
- }
- .n{
-    text-align:center;
- }
- .r{
-    text-align:center;
- }
- .v{
-    text-align:center;
- }
- .w{
-    text-align:center;
- }
+ 
