--- a/style.css
+++ b/style.css
@@ -8,4 +8,13 @@
  .mark{
   font-size: 20px;
  }
- 
+ .circle {
+  background: #b7ec46;
+  border-radius: 50%;
+  width: 300px;
+  height: 80px;
+  color: black;
+  font-size: 30px;
+  text-align: center;
+  line-height: 80px;
+}
